--- a/admin/package.json
+++ b/admin/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://NirmalNaveen20.github.io/livecare-hospitals",  
   "name": "admin",
   "proxy": "http://localhost:5000/",
   "secure": false,
@@ -33,6 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
